--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -1,34 +1,11 @@
-#
-# Format:
-#
-# <stage name>:
-#   app: <Heroku app name>
-#   stack: <Heroku stack, optional>
-#   tag: <git tag pattern, optional>
-#   repo: <git repository, optional>
-#   config:
-#     - <Heroku config:var name>: <Heroku config:var value>
-#
-
 production:
-  app: awesomeapp
-  stack: bamboo-ree-1.8.7
-  tag: production/*
+  app: westend-church
+  repo: https://git.heroku.com/westend-church.git
   config:
     BUNDLE_WITHOUT: "development:test"
-    GOOGLE_ANALYTICS: "UA-12345678-1"
 
 staging:
-  stack: cedar
-  app: awesomeapp-staging
+  app: westend-church-staging
+  repo: https://git.heroku.com/westend-church-staging.git
   config: &default
     BUNDLE_WITHOUT: "development:test"
-  addons:
-    - pgbackups:auto-week
-    - memcache:5mb
-    - logging:basic
-    - scheduler:standard
-
-demo:
-  app: awesomeapp-demo
-  config: *default
