--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -1,11 +1,12 @@
 production:
-  app: westend-church
+  app: west-end-church
   repo: https://git.heroku.com/west-end-church.git
   config:
     BUNDLE_WITHOUT: "development:test"
 
 staging:
-  app: westend-church-staging
-  repo: https://git.heroku.com/west-end-church-staging.git
+  app: west-end-church-staging
+  # repo: https://git.heroku.com/west-end-church-staging.git
+  repo: git@heroku.personal:west-end-church-staging.git
   config: &default
     BUNDLE_WITHOUT: "development:test"
