changing these things back since I don't believe that actually effected me being able to deploy. The deployment worked just fine once I fixed the type-o in the bootstrap css file in the previous commit.

--- a/config/heroku.yml
+++ b/config/heroku.yml
@@ -6,7 +6,6 @@ production:
 
 staging:
   app: west-end-church-staging
-  # repo: https://git.heroku.com/west-end-church-staging.git
-  repo: git@heroku.personal:west-end-church-staging.git
+  repo: https://git.heroku.com/west-end-church-staging.git
   config: &default
     BUNDLE_WITHOUT: "development:test"
